now u can able to download models

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
 <head>
     <title>Chat with Llama2</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link href="resources/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-    <script src="resources/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script src="resources/marked.min.js"
-        crossorigin="anonymous"></script>
-    <script src="resources/purify.min.js" 
-        crossorigin="anonymous"></script>
+    <link href="resources/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="resources/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="resources/marked.min.js" crossorigin="anonymous"></script>
+    <script src="resources/purify.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="chat.css">
 </head>
 
