delete unnecessary files

--- a/Hostname.html
+++ b/Hostname.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chat with Llama2</title>
+    <title>Host</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
