--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chat with Llama2</title>
+    <title>Chat with AI</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="resources/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
